# redplanet

./: .gitignore  CMakeLists.txt  Makefile  README.md
arch/: boot.asm  gdt.c  linker.ld
device/: console.c  serial.c
include/arch/: asm.h  gdt.h
include/device/: console.h  serial.h
kernel/: CMakeLists.txt
kernel/arch/cpu/: asm.h  exceptions.cpp  exceptions.h  gdt.cpp  gdt.h  idt.cpp  idt.h  pic.cpp  pic.h
kernel/arch/init/: boot.s  console.cpp  console.h  linker.ld  main.cpp
kernel/common/: defines.h  limits.h
kernel/debug/: assert.cpp  assert.h
kernel/init/: asm.h  boot.s  console.cpp  exceptions.cpp  exceptions.h  gdt.cpp  gdt.h  idt.cpp  idt.h  linker.ld  main.cpp  pic.h
kernel/memory/: heap.cpp  heap.h  pmm.cpp  pmm.h  vmm.cpp  vmm.h
kernel/sys/: defines.h
kernel/tasking/: process.cpp  scheduler.cpp  scheduler.h  task.cpp
kernel/timer/: timer.cpp  timer.h
meta/: grub.cfg
redplanet/: main.c
